--- a/example/example-pt.html
+++ b/example/example-pt.html
@@ -14,28 +14,28 @@
 
     <div class="row mb-3">
       <div class="col-md-3">
-      <label for="dtp" class="form-label">Pick date &amp; time</label>
+      <label for="dtp" class="form-label">Selecione data e hora</label>
         <div class="input-group">
-          <input id="dtp" class="form-control" placeholder="YYYY-MM-DD HH:MM" autocomplete="off">
+          <input id="dtp" class="form-control" placeholder="DD/MM/YYYY HH:MM" autocomplete="off">
           <button class="btn btn-outline-secondary" id="dtpToggle" type="button" aria-label="Toggle datetime picker">
             <i class="fa-solid fa-calendar-days" aria-hidden="true"></i>
-            <span class="visually-hidden">Toggle datetime picker</span>
+            <span class="visually-hidden">Mostrar seletor de data e hora</span>
           </button>
         </div>
       </div>
     </div>
 
     <hr>
-    <h5>Demo controls</h5>
+    <h5>Controles de demonstração</h5>
     <div class="row gy-2">
       <div class="col-12">
-        <button id="setNow" class="btn btn-primary">Set to now</button>
-        <button id="clear" class="btn btn-outline-secondary">Clear</button>
+        <button id="setNow" class="btn btn-primary">Definir como agora</button>
+        <button id="clear" class="btn btn-outline-secondary">Limpar</button>
       </div>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/all.min.js" integrity="sha512-6BTOlkauINO65nLhXhthZMtepgJSghyimIalb+crKRPhvhmsCdnIuGcVbR5/aQY2A+260iC1OPy1oCdB6pSSwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <script src="../dist/bs5-datetime.min.js"></script>
+  <script src="../dist/bs5-datetime-pt.min.js"></script>
 </body>
 </html>
