--- a/example/example.html
+++ b/example/example.html
@@ -37,5 +37,19 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/all.min.js" integrity="sha512-6BTOlkauINO65nLhXhthZMtepgJSghyimIalb+crKRPhvhmsCdnIuGcVbR5/aQY2A+260iC1OPy1oCdB6pSSwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   <script src="../dist/bs5-datetime.min.js"></script>
+  <script>
+    // Demo init when loaded
+    document.addEventListener('DOMContentLoaded', ()=>{
+      const input = document.getElementById('dtp');
+      createDatetimeTemplate();
+      const picker = createDatetimePicker(input, {startDay:1});
+      document.getElementById('setNow').addEventListener('click', ()=>{
+        picker.setDate(new Date());
+      });
+      document.getElementById('clear').addEventListener('click', ()=>{
+        picker.setDate('');
+      });
+    });
+  </script>
 </body>
 </html>
