--- a/example/example-pt.html
+++ b/example/example-pt.html
@@ -14,41 +14,29 @@
 
     <div class="row mb-3">
       <div class="col-md-3">
-      <label for="dtp" class="form-label">Selecione data e hora</label>
+      <label for="dtp" class="form-label">Escolher data e hora</label>
         <div class="input-group">
           <input id="dtp" class="form-control" placeholder="DD/MM/YYYY HH:MM" autocomplete="off">
-          <button class="btn btn-outline-secondary" id="dtpToggle" type="button" aria-label="Toggle datetime picker">
+          <button class="btn btn-outline-secondary" id="dtpToggle" type="button" aria-label="Mostrar o seletor de data e hora">
             <i class="fa-solid fa-calendar-days" aria-hidden="true"></i>
-            <span class="visually-hidden">Mostrar seletor de data e hora</span>
+            <span class="visually-hidden">Mostrar o seletor de data e hora</span>
           </button>
         </div>
-      </div>
-    </div>
-
-    <hr>
-    <h5>Controles de demonstração</h5>
-    <div class="row gy-2">
-      <div class="col-12">
-        <button id="setNow" class="btn btn-primary">Definir como agora</button>
-        <button id="clear" class="btn btn-outline-secondary">Limpar</button>
       </div>
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/all.min.js" integrity="sha512-6BTOlkauINO65nLhXhthZMtepgJSghyimIalb+crKRPhvhmsCdnIuGcVbR5/aQY2A+260iC1OPy1oCdB6pSSwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <script src="../dist/bs5-datetime-pt.min.js"></script>
+  <script src="../dist/bs5-datetime.min.js"></script>
   <script>
     // Demo init when loaded
-    document.addEventListener('DOMContentLoaded', ()=>{
+    document.addEventListener('DOMContentLoaded', () => {
+
       const input = document.getElementById('dtp');
+      const toggle = document.getElementById('dtpToggle');
       createDatetimeTemplate();
-      const picker = createDatetimePicker(input, {startDay:1});
-      document.getElementById('setNow').addEventListener('click', ()=>{
-        picker.setDate(new Date());
-      });
-      document.getElementById('clear').addEventListener('click', ()=>{
-        picker.setDate('');
-      });
+      const picker = createDatetimePicker(input, toggle);
+      
     });
   </script>
 </body>
