Allow hiding the time input, allow different formats, create translation files,  create build script.

--- a/example/example.html
+++ b/example/example.html
@@ -6,7 +6,7 @@
   <title>BS5 DateTime</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/fontawesome.min.js" integrity="sha512-obFNtQ1JKCrxPBPLmYDUevlriATl5EhvwU3CFtdW/HKOkeAe0bbsyZfHO44/f1QyndrZJ464TQvrRP9ZjyXSSA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="../dist/bs5-datetime.min.css">
+  <link rel="stylesheet" href="../src/bs5-datetime.css">
 </head>
 <body class="p-4">
   <div class="container">
@@ -27,7 +27,8 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/all.min.js" integrity="sha512-6BTOlkauINO65nLhXhthZMtepgJSghyimIalb+crKRPhvhmsCdnIuGcVbR5/aQY2A+260iC1OPy1oCdB6pSSwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <script src="../dist/bs5-datetime.min.js"></script>
+  <script src="../src/locale-en-us.js"></script>
+  <script src="../src/bs5-datetime.js"></script>
   <script>
     // Demo init when loaded
     document.addEventListener('DOMContentLoaded', () => {
