--- a/examples/example.html
+++ b/examples/example.html
@@ -27,13 +27,13 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/js/all.min.js" integrity="sha512-6BTOlkauINO65nLhXhthZMtepgJSghyimIalb+crKRPhvhmsCdnIuGcVbR5/aQY2A+260iC1OPy1oCdB6pSSwQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <script src="../src/locale-en-us.js"></script>
   <script src="../src/bs5-datetime.js"></script>
   <script>
     // Demo init when loaded
     document.addEventListener('DOMContentLoaded', () => {
       const input = document.getElementById('dtp');
       const toggle = document.getElementById('dtpToggle');
+      setDatetimeLocale('en-us');
       createDatetimeTemplate();
       const picker = createDatetimePicker(input, toggle, null, {});
     });
